--- a/views/book_details.ejs
+++ b/views/book_details.ejs
@@ -89,17 +89,24 @@
             </div>
             <% if (reviews && reviews.length > 0) { %>
                 <% reviews.forEach(review => { %>
-            <div class="row mt-3">
-                <div class="col-2">
-                    <img src="https://images.gr-assets.com/users/1714842419p6/154684875.jpg" style="border-radius: 50%; width: 60%; object-fit: contain;" >
-                        <div style="font-family: Georgia, serif; font-weight: 600; font-size: 14px; line-height: 20px; color: #1e1915;"></div>
-                        <div class="" style="font-family: Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 19px; color: #707070;">
-                            2,544 reviews
+                    <div class="row mt-3">
+                        <div class="col-2">
+                            <img src="https://images.gr-assets.com/users/1714842419p6/154684875.jpg" style="border-radius: 50%; width: 60%; object-fit: contain;" >
+                            <div style="font-family: Georgia, serif; font-weight: 600; font-size: 14px; line-height: 20px; color: #1e1915;">
+                                <!-- User name or any other information related to the review -->
+                            </div>
+                            <div class="" style="font-family: Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 19px; color: #707070;">
+                                <!-- Number of reviews or any other information related to the review -->
+                            </div>
                         </div>
-                </div>
-                <%= review.content %>
+                        <div class="col-10">
+                            <!-- Render the review content -->
+                            <%- review.content %>
+                        </div>
+                    </div>
                 <% }) %>
-                <% } %>     
+            <% } %>
+                
                 <div class="col-10">
                     <div class="d-flex justify-content-between">
                         <div class="">
