--- a/views/book_details.ejs
+++ b/views/book_details.ejs
@@ -90,51 +90,9 @@
             <% if (reviews && reviews.length > 0) { %>
                 <% reviews.forEach(review => { %>
                     <div class="row mt-3">
-                        <div class="col-2">
-                            <img src="https://images.gr-assets.com/users/1714842419p6/154684875.jpg" style="border-radius: 50%; width: 60%; object-fit: contain;" >
-                            <div style="font-family: Georgia, serif; font-weight: 600; font-size: 14px; line-height: 20px; color: #1e1915;">
-                                <!-- User name or any other information related to the review -->
-                            </div>
-                            <div class="" style="font-family: Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 19px; color: #707070;">
-                                <!-- Number of reviews or any other information related to the review -->
-                            </div>
-                        </div>
-                        <div class="col-10">
-                            <!-- Render the review content -->
-                            <%- review.content %>
-                        </div>
-                    </div>
-                <% }) %>
-            <% } %>
-                
-                <div class="col-10">
-                    <div class="d-flex justify-content-between">
-                        <div class="">
-                            <% for (let i = 0; i < 5; i++) { %>
-                                <i class="bi bi-star fs-6"></i>
-                            <% } %>
-                        </div>
-                        <div>
-                            September 4, 2023
-                        </div>
-                    </div>
-                    <div class="mt-2" style="font-family: Arial, sans-serif; font-weight: 400; font-size: 16px; line-height: 23px; color: #1e1915;">
-                        this summer will NOT be different if there’s another cheating trope…carley, side EYE. besties keep me posted when this comes out😂thanks😙
-
-                        ps: i don’t actually wanna read this🫣🫣🫣
-                    </div>
-                    <div class="mt-2" style="font-family: Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 19px; color: #707070;">
-                        335 likes 27 comments
-                    </div>
-                    <div class="mt-2" style="font-family: Arial, sans-serif; font-weight: 600; font-size: 14px; line-height: 20px; color: #1e1915;">
-                    <i class="bi bi-hand-thumbs-up"></i> Like
-                    <i class="bi bi-chat ms-3"></i> Comment
-                    </div>
-                <hr>
-                </div>
                 <div class="col-2">
                     <img src="https://images.gr-assets.com/users/1714842419p6/154684875.jpg" style="border-radius: 50%; width: 60%; object-fit: contain;" >
-                        <div style="font-family: Georgia, serif; font-weight: 600; font-size: 14px; line-height: 20px; color: #1e1915;">Nilufer Ozmekik</div>
+                        <div style="font-family: Georgia, serif; font-weight: 600; font-size: 14px; line-height: 20px; color: #1e1915;"><%= review.user.fullName %></div>
                         <div class="" style="font-family: Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 19px; color: #707070;">
                             2,544 reviews
                         </div>
@@ -142,19 +100,12 @@
                   
                 <div class="col-10">
                     <div class="d-flex justify-content-between">
-                        <div class="">
-                            <% for (let i = 0; i < 5; i++) { %>
-                                <i class="bi bi-star fs-6"></i>
-                            <% } %>
-                        </div>
-                        <div>
-                            September 4, 2023
+                        <div class="ms-auto">
+                            <%= review.formattedDate %>
                         </div>
                     </div>
                     <div class="mt-2" style="font-family: Arial, sans-serif; font-weight: 400; font-size: 16px; line-height: 23px; color: #1e1915;">
-                        this summer will NOT be different if there’s another cheating trope…carley, side EYE. besties keep me posted when this comes out😂thanks😙
-
-                        ps: i don’t actually wanna read this🫣🫣🫣
+                        <%- review.content %>
                     </div>
                     <div class="mt-2" style="font-family: Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 19px; color: #707070;">
                         335 likes 27 comments
@@ -165,6 +116,8 @@
                     </div>
                 <hr>
                 </div>
+                <% }) %>
+            <% } %>
                 <div class="d-flex justify-content-between align-items-center">
                     <!-- Horizontal line to the left -->
                     <hr class="flex-grow-1 mr-3" style="border-top: 2px solid #767676;">
