--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -413,3 +413,37 @@ width: 100%;
 .review_title_link:hover{
     text-decoration: underline !important;
 }
+
+.comment-box {
+    width: 100%;
+    margin-top: 10px;
+}
+
+.comment-input-container {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 10px;
+}
+
+.user-image-placeholder {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #ccc; /* Placeholder background color */
+    margin-right: 10px;
+}
+
+.comment-input {
+    flex: 1;
+    padding: 10px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 10%;
+    resize: vertical; /* Allow vertical resizing */
+}
+
+.comment-submit {
+    padding: 10px 20px;
+    font-size: 14px;
+    border-radius: 5px;
+}
