--- a/views/book_details.ejs
+++ b/views/book_details.ejs
@@ -130,23 +130,6 @@
                             <div class="row">
                                 <div class="col-12">
                                     <div class="row">
-                                        <div class="col-1 mt-2">
-                                            <div class="user-image-placeholder"></div> <!-- User image placeholder -->
-                                        </div>
-                                        <div class="col-10 mt-2">
-                                            <div class="d-flex justify-content-between">
-                                                <div class="d-flex">
-                                                    <div>Stephen Owabie</div> 
-                                                    <div class="ms-2">1 hour ago</div> 
-                                                </div>
-                                                <div>
-                                                    <i class="bi bi-three-dots fs-5"></i>
-                                                </div>
-                                            </div>
-                                            <div>
-                                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus earum assumenda impedit quaerat suscipit consectetur fugiat recusandae unde ab debitis! Odit voluptate omnis adipisci repudiandae odio neque, eum sit illum quod minima non dolorem tempora facere officiis sunt ipsa ipsum quaerat maxime nulla quia saepe sequi. Doloribus ullam nobis est assumenda dolor? Nulla doloribus atque ipsum officiis quae sit veritatis. Excepturi pariatur quibusdam, ratione corporis accusantium molestiae error tenetur aperiam expedita magnam amet itaque ea eaque obcaecati cum! Error explicabo expedita rerum omnis, ipsam, aspernatur voluptate qui pariatur illo repellendus sapiente neque vitae animi incidunt. Sint voluptatem nobis cum, eveniet ipsum dignissimos dolor perspiciatis provident illum a alias quos ullam facilis corrupti itaque assumenda, ducimus porro nihil iste quidem sequi harum impedit maiores accusamus. Omnis quibusdam obcaecati ducimus deleniti necessitatibus autem provident quia est ex nostrum inventore sed similique amet temporibus quam magnam veniam assumenda saepe, debitis iste, quis perferendis voluptates expedita error. Repudiandae vitae reiciendis obcaecati eum deserunt sequi, perferendis perspiciatis quisquam, debitis nisi expedita quas ab! Aliquam commodi iusto dignissimos reprehenderit consequatur ullam deleniti doloribus minus molestias! Nisi, a aliquam sed atque quo similique nemo fugiat veniam, vitae natus aperiam illum ipsum sint provident aspernatur tempore voluptatibus consequatur deserunt facere consectetur, autem praesentium possimus? Ipsum repellendus voluptas aperiam dolore qui perferendis cum. Atque deleniti consequatur provident sint in ab neque impedit explicabo quisquam eum, error sed minima veritatis suscipit molestiae nisi. Sint eos ut nostrum nam fugiat suscipit, asperiores expedita id saepe recusandae harum voluptate nisi, accusantium rem nesciunt minus consequuntur quasi numquam, sequi blanditiis reprehenderit ducimus. Repellat exercitationem asperiores veniam, nihil facilis quaerat corrupti quam magnam deserunt inventore esse dolorum. Saepe, officia tenetur odio aliquid officiis voluptates cumque error quibusdam dolor eveniet asperiores obcaecati ex excepturi sapiente illum labore nobis itaque nihil. Id eveniet, fuga ea obcaecati fugiat quod, facilis qui explicabo, repudiandae magni doloribus cumque voluptatum autem iste a officia laboriosam! Architecto animi officiis fuga nisi, eos quod alias eveniet minima odio nemo repudiandae voluptatum obcaecati, exercitationem debitis perferendis, aperiam ipsa? Mollitia recusandae maiores fugit vero necessitatibus aliquid, labore tempore? Dignissimos quasi labore eligendi, aspernatur consequatur voluptatibus perspiciatis natus dolor illum culpa, magni perferendis unde officiis nemo omnis. Aspernatur ipsa, et eveniet, tempore ex cupiditate sit aliquid quibusdam, deleniti fuga consectetur numquam sunt modi consequatur blanditiis qui alias inventore nam illum quo repudiandae! Omnis, accusamus fugit itaque aspernatur dolorum explicabo quos beatae sunt odio deleniti nostrum obcaecati, ipsum sit. Minima unde in maiores ipsum perspiciatis quo ad illo consequatur quia odit dignissimos corrupti velit ullam nulla amet vel nostrum non rerum hic, accusamus aperiam. Molestias placeat aliquid quibusdam exercitationem veritatis laudantium eligendi! Porro officia, illum autem pariatur commodi libero odit cupiditate neque repudiandae quam reprehenderit tenetur dignissimos voluptate laborum mollitia, unde, optio quas. Adipisci, iure incidunt? Culpa, debitis doloribus doloremque quam ad blanditiis eligendi sed consequuntur error excepturi aspernatur animi odio, nulla incidunt aut amet dolorem omnis et veniam, distinctio quis sequi cumque! Aperiam minus magni, illo corporis consectetur itaque numquam quia iure nobis voluptatibus possimus.
-                                            </div>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -351,12 +334,12 @@ commentLinks.forEach(function(commentLink) {
                         console.log('Comment submission successful, updating UI...');
 
                         const commentHtml = `
-                            <div class="col-12">
+                            <div class="col-12 mb-3">
                                 <div class="row">
-                                    <div class="col-1 mt-2">
+                                    <div class="col-lg-1 col-md-2 col-1 mt-2">
                                         <div class="user-image-placeholder"></div>
                                     </div>
-                                    <div class="col-10 mt-2">
+                                    <div class="col-lg-10 col-md-10 mt-2">
                                         <div class="d-flex justify-content-between">
                                             <div class="d-flex">
                                                 <div>${data.comment.userFullName}</div>
@@ -366,12 +349,12 @@ commentLinks.forEach(function(commentLink) {
                                                 <i class="bi bi-three-dots fs-5"></i>
                                             </div>
                                         </div>
-                                        <div>${data.comment.content}</div>
+                                        <div style="color:red">${data.comment.content}</div>
                                     </div>
                                 </div>
                             </div>
                         `;
-                        document.getElementById(`comment-box-${reviewId}`).insertAdjacentHTML('beforeend', commentHtml);
+                        document.getElementById(`comment-box-${reviewId}`).insertAdjacentHTML('afterbegin', commentHtml);
                         contentElement.value = ''; // Clear input
                         document.getElementById(`comment-box-${reviewId}`).style.display = 'block'; // Show comments section
                     } else {
