--- a/views/book_details.ejs
+++ b/views/book_details.ejs
@@ -130,6 +130,27 @@
                             <div class="row">
                                 <div class="col-12">
                                     <div class="row">
+                                        <% review.comments.forEach(comment => { %>
+                                        <div class="col-12 mb-3">
+                                            <div class="row">
+                                                <div class="col-lg-1 col-md-2 col-1 mt-2">
+                                                    <div class="user-image-placeholder"></div>
+                                                </div>
+                                                <div class="col-lg-10 col-md-10 mt-2">
+                                                    <div class="d-flex justify-content-between">
+                                                        <div class="d-flex">
+                                                            <div><%= comment.user.fullName %></div>
+                                                            <div class="ms-2"><%= comment.formattedDate %></div>
+                                                        </div>
+                                                        <div>
+                                                            <i class="bi bi-three-dots fs-5"></i>
+                                                        </div>
+                                                    </div>
+                                                    <div><%= comment.content %></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <% }) %>
                                     </div>
                                 </div>
                             </div>
